Adding cucumber-java support for aceptance tests in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- Without lambda expressions support -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>4.2.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
