--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
             <version>4.2.5</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>4.2.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
